infra/k8s/monitoring/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /prom/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mon-kube-prometheus-stack-prometheus
            port:
              number: 9090
